# online-face-detection

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
online_face/: __init__.py  __main__.py  _annotate.py  _autoscale.py  _wire.py  aio.py  client.py  detector.py  registry.py  serve.py  stream_client.py
online_face/cli/: __init__.py  export.py  run.py
online_face/families/: __init__.py  base.py  retinaface.py
online_face/models/retinaface/: __init__.py  box.py  net.py
online_face/runtime/: __init__.py  cache.py  config.py  device.py  errors.py  export.py  logging.py  sources.py  streaming.py  tensor.py  timing.py
online_face/runtime/backends/: __init__.py  base.py  onnx_backend.py  torch_backend.py  torchscript_backend.py  trt_backend.py
online_face/runtime/viz/: __init__.py  draw.py
tests/: test_aio.py  test_annotate.py  test_autoscale.py  test_client.py  test_instances.py  test_postprocess_graph.py  test_smoke.py  test_stream.py  test_wire.py
