[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "online-face-detection"
version = "0.1.10"
description = "Streaming, frame-by-frame face detection (RetinaFace) with a unified torch/torchscript/onnx/trt runtime and export-once caching for edge devices."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
keywords = ["face-detection", "retinaface", "streaming", "tensorrt", "onnx", "edge", "jetson"]
authors = [{ name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# The default runtime. Install this unless you are on Jetson (use JetPack wheels there).
# Default runtime. Includes retinaface-pytorch so the `ternaus_resnet50` weight works out of the box.
torch = ["torch>=2.1", "torchvision>=0.16", "retinaface-pytorch>=0.0.7"]
onnx = ["onnxruntime>=1.16", "onnx>=1.15", "onnxsim>=0.4.33"]
# Does NOT install tensorrt: its CUDA build must match your system, so install it yourself
# (NVIDIA's pip guide), then add this extra for the onnx export path + fp16 converter.
trt = ["online-face-detection[onnx]", "onnxconverter-common>=1.13"]
# Host the model over HTTP (uniform contract). Adds no torch beyond the runtime extra.
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
# Talk to a remote service. Torch-free: numpy/opencv (core) + requests only.
client = ["requests>=2.31"]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
online-face = "online_face.cli.run:main"
online-face-export = "online_face.cli.export:main"
online-face-serve = "online_face.serve:main"

[project.urls]
Homepage = "https://github.com/Surya-Rayala/online-face-detection"
Repository = "https://github.com/Surya-Rayala/online-face-detection"
Issues = "https://github.com/Surya-Rayala/online-face-detection/issues"

[tool.hatch.build.targets.wheel]
packages = ["online_face"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
